--- a/Mobile/Base.lproj/Main.storyboard
+++ b/Mobile/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cC1-e2-xxQ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sr1-Sd-bsI">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Master View Controller-->
+        <!--2008-2018 mobile data-->
         <scene sceneID="SP0-Di-01M">
             <objects>
                 <viewController id="cC1-e2-xxQ" customClass="MasterViewController" customModule="Mobile" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,19 +16,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uif-gI-uSC">
-                                <rect key="frame" x="146" y="256" width="42" height="269"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="GbF-yS-xsE">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="GbF-yS-xsE" firstAttribute="top" secondItem="y8l-kZ-u5r" secondAttribute="top" id="9BQ-UK-cwp"/>
+                            <constraint firstItem="GbF-yS-xsE" firstAttribute="leading" secondItem="y8l-kZ-u5r" secondAttribute="leading" id="H3f-NE-SOl"/>
+                            <constraint firstItem="y8l-kZ-u5r" firstAttribute="bottom" secondItem="GbF-yS-xsE" secondAttribute="bottom" id="xGH-Z1-Oog"/>
+                            <constraint firstItem="y8l-kZ-u5r" firstAttribute="trailing" secondItem="GbF-yS-xsE" secondAttribute="trailing" id="y20-tP-LGb"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="y8l-kZ-u5r"/>
                     </view>
+                    <navigationItem key="navigationItem" title="2008-2018 mobile data" id="zh9-4p-a0a"/>
+                    <connections>
+                        <outlet property="tableView" destination="GbF-yS-xsE" id="XsI-Wt-ZU9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wOV-Ja-SFo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="460.86956521739131" y="-415.84821428571428"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eCg-Un-ONl">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sr1-Sd-bsI" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zxh-Uy-kIQ">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cC1-e2-xxQ" kind="relationship" relationship="rootViewController" id="LiI-ps-rGh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AHg-nP-u46" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-449.27536231884062" y="-415.84821428571428"/>
         </scene>
