--- a/Mobile/Views/MasterTableViewCell.xib
+++ b/Mobile/Views/MasterTableViewCell.xib
@@ -34,8 +34,9 @@
                             </label>
                         </subviews>
                     </stackView>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-graph-50" translatesAutoresizingMaskIntoConstraints="NO" id="LKd-qn-aZ6">
+                    <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-graph-50" translatesAutoresizingMaskIntoConstraints="NO" id="LKd-qn-aZ6">
                         <rect key="frame" x="260" y="8" width="80" height="135"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="xq4-3u-Zk7"/>
                         </constraints>
