--- a/Mobile/Views/TableViewCells/MasterTableViewCell.xib
+++ b/Mobile/Views/TableViewCells/MasterTableViewCell.xib
@@ -36,6 +36,9 @@
                     </stackView>
                     <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-graph-50" translatesAutoresizingMaskIntoConstraints="NO" id="LKd-qn-aZ6">
                         <rect key="frame" x="260" y="8" width="80" height="135"/>
+                        <accessibility key="accessibilityConfiguration">
+                            <bool key="isElement" value="YES"/>
+                        </accessibility>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="width" constant="80" id="xq4-3u-Zk7"/>
